--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.0",
   "permissions": ["storage"],
   "web_accessible_resources": [{
-    "resources": ["ArtistUsesAI.png"],
+    "resources": ["ArtistUsesAI.png","LooksHuman.png"],
     "matches": ["https://music.youtube.com/*"]
   }],
   "background": {
